# climate-data-pipeline

./: .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements-full.txt  requirements.txt  vercel.json
api/: index.py  main.py  requirements.txt
docs/: api-reference.md  chunking-strategy.md
src/: arco_demo.py  benchmark_suite.py  stac_demo.py
src/climate_pipeline/: __init__.py
src/climate_pipeline/api/: __init__.py  cache.py  main.py
src/climate_pipeline/api/routes/: data.py  health.py  metrics.py
src/climate_pipeline/ingest/: __init__.py  arco_converter.py  netcdf_reader.py
src/climate_pipeline/metrics/: __init__.py  anomalies.py  percentiles.py  temporal.py  trends.py
src/climate_pipeline/processing/: __init__.py  chunking.py  dask_pipeline.py
src/climate_pipeline/tasks/: __init__.py  celery_tasks.py
tests/: __init__.py  conftest.py
tests/test_api/: test_main.py
tests/test_ingest/: __init__.py  test_arco_converter.py  test_netcdf_reader.py
tests/test_metrics/: __init__.py  test_anomalies.py  test_percentiles.py  test_temporal.py
tests/test_processing/: __init__.py  test_chunking.py
