[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate-data-pipeline"
version = "1.0.0"
description = "Climate data processing pipeline with NetCDF/Zarr support, pre-calculated metrics, and FastAPI endpoints"
readme = "README.md"
license = "MIT"
authors = [
    { name = "S. Kalogerakos", email = "stam287@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "xarray>=2024.1.0",
    "dask[complete]>=2024.1.0",
    "zarr>=2.16.0",
    "netCDF4>=1.6.5",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/vulcan2018/climate-data-pipeline"
Repository = "https://github.com/vulcan2018/climate-data-pipeline"

[tool.hatch.build.targets.wheel]
packages = ["src/climate_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/climate_pipeline --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
